# python-unified-context-layer

./: .gitignore  API_README.md  Makefile  README.md  UCL_README.md  bitbucket-pipelines.yml  pyproject.toml
application/di/: README.md  __init__.py  dependencies.py  service_manager.py
application/ports/: ai_adapter_port.py  context_repository.py
application/ports/driving/users/: api_port.py  service_port.py
application/services/: ai_orchestrator_service.py  context_cache_service.py  context_service.py  context_sync_service.py  users_service.py
config/: ai_adapter_impl.py  asgi.py  dependencies.py  urls.py  wsgi.py
config/settings/: base.py  custom_logging.py  i18n.py  local.py  oauth.py  push_notifications.py  staticfiles.py  tasks.py
domain/entities/: project_context.py  users.py
driven/db/context/: admin.py  apps.py  mapper.py  models.py  repository.py
driven/db/context/migrations/: 0001_initial.py  0002_remove_contextindexdbo_unique_project_file_path_and_more.py  (+1 more)
driven/db/users/: adapter.py  admin.py  apps.py  mapper.py  models.py
driving/api/: fastapi_app.py
driving/api/users/: adapter.py  mapper.py
driving/api/users/models/: requests.py  (+1 more)
driving/clients/: smart_sync_client.py
driving/mcp/: ucl_mcp_server.py
driving/webhooks/: context_notifications.py
examples/: ucl_example.py
scripts/: checks.sh  create_test_data_django.py  create_test_project.py  init_db.sql  install_private_repositories.sh  run_both.sh  run_deploy.sh  run_django.sh  run_fastapi.sh  run_linters.sh  run_pylint.sh  run_tests.sh  setup_db.sh  setup_test_db.py  test.sh
(+4 files in other folders)
