[project]
name = "architecture-python-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aitor Poquet", email = "aitorpoquet@rudo.es" }
]
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<6.0",
    "django-oauth-toolkit>=3.0,<4.0",
    "django-cors-headers>=4.6,<5.0",
    "social-auth-app-django>=5.4,<6.0",
    "firebase-admin>=6.6,<7.0",
    "django-extensions>=4.1,<5.0",
    "django-nested-admin>=4.1,<5.0",
    "psycopg2>=2.9,<3.0",
    "celery>=5.4,<6.0",
    "gevent>=24.11,<25.0",
    "gunicorn>=23.0,<24.0",
    "redis>=5.2,<6.0",
    "django-storages>=1.14,<2.0",
    "boto3>=1.36,<2.0",
    "pydantic[email]>=2.10,<3.0",
    "rudo-commons @ git+https://bitbucket.org/rudoapps/gula-python-common.git",
    "fastapi>=0.116.0",
    "fastapi-mcp>=0.3.4",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["application", "config", "domain", "driven", "driving"]

